--- a/src/App.css
+++ b/src/App.css
@@ -1,94 +1,66 @@
+/* #movies-wrapper{
+    width: 80%;
+    border:1px solid black;
+    margin:30px auto;
+    display: flex;
+    flex-wrap: wrap;
+}
+.movie-card{
+    width: 20%;
+    margin:10px 10px;
+    border:1px solid green;
+    text-align: center;
+
+}
+.movie-thumbnail{
+    width: 100%;
+    height:220px;
+} */
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.box{
+    text-align: center;
+    margin:50px;
+}
+.time{
+    font-size: 100px;
+    text-align: center;
+}
+.container{
+    background-color: white;
+    box-shadow: 1px 2px 2px  lightgrey;
+    width: 400px;
+    margin-top:250px;
+
+}
 body{
-  background-color:whitesmoke;
+    background-color: whitesmoke;
+
+}
+button{
+    margin:10px auto;
+    padding: 10px;
+    width: 100px;
+}
+.start-btn{
+    background-color:lightgreen;
+}
+.stop-btn{
+    background-color:lightcoral; 
 }
 
 
-.card{
-  width: 600px;
-  background-color: aliceblue;
-
-}
-h1{
-  text-align: center;
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/* #header{
-  background-color: black;
-  padding:25px;
-  text-align: center;
-}
-body{
-  background-color: gray;
-
-}
-#header a{
-  color:white;
-  font-size: 20px;
-  padding:15px;
-}
-.food-card{
-  width:400px;
-  border:1px solid black;
-  text-align: center;
-  margin: 10px auto;
-  background-color: white;
-  border-radius: 10px;
-}
-.food-img{
-  width:100%;
-  border-top-right-radius: 10px;
-  border-top-left-radius: 10px;
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
- */
