--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,8 @@
     background-color: white;
     box-shadow: 1px 2px 2px  lightgrey;
     width: 400px;
-    margin-top:250px;
+    /* margin-top:250px; */
+    margin: 250px auto;
 
 }
 body{
