--- a/src/App.css
+++ b/src/App.css
@@ -1,34 +1,41 @@
 
-.box{
-    text-align: center;
-    margin:50px;
-}
-.time{
-    font-size: 100px;
-    text-align: center;
-}
-.container{
-    background-color: white;
-    box-shadow: 1px 2px 2px  lightgrey;
-    width: 400px;
-    /* margin-top:250px; */
-    margin: 250px auto;
 
-}
+
 body{
     background-color: whitesmoke;
-
 }
+.container{
+    text-align: center;
+    font-size: 100px;
+    background-color: white;
+    box-shadow: 1px 2px 2px  lightgrey;
+    width: 350px;
+    margin: 200px auto;
+}
+
 button{
-    margin:10px auto;
+
+    font-size: 30px;
+   margin:50px 10px 10px 10px;
+   border:1px solid gray;
     padding: 10px;
-    width: 100px;
+    width:100px;
+   
+  
 }
 .start-btn{
     background-color:lightgreen;
+    font-size: 28px;
+    border-radius: 5px;
+
 }
 .stop-btn{
     background-color:lightcoral; 
+    font-size: 28px;
+    border-radius: 5px;
+
+
 }
+
 
 
